--- a/Views/Craft/NewCraft.cshtml
+++ b/Views/Craft/NewCraft.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="mb-3">
         <label class="form-label" asp-for="Description"></label>
-        <input class="form-control" asp-for="Description">
+        <textarea rows="7" class="form-control" asp-for="Description"></textarea>
         <span class="form-text text-warning" asp-validation-for="Description"></span>
     </div>
     <div class="mb-3">
