--- a/Views/Craft/EditCraft.cshtml
+++ b/Views/Craft/EditCraft.cshtml
@@ -1,8 +1,8 @@
 @model Craft;
 
-<h2 class="display-4">Share your craft</h2>
+<h2 class="display-4">Edit your craft</h2>
 
-<form asp-action="CreateCraft" asp-controller="Craft" method="post">
+<form asp-action="UpdateCraft" asp-controller="Craft" asp-route-craftId="@Model.CraftId" method="post">
     <input type="hidden" asp-for="UserId">
     <div class="mb-3">
         <label class="form-label" asp-for="Name"></label>
@@ -20,6 +20,6 @@
         <span class="form-text text-warning" asp-validation-for="Website"></span>
     </div>
     <div class="text-end">
-        <button type="submit" class="btn btn-primary">Share</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </form>
