--- a/Views/Craft/Crafts.cshtml
+++ b/Views/Craft/Crafts.cshtml
@@ -17,7 +17,7 @@
             <div class="card col-4">
                 <h6>@(craft?.Name ?? "Unknown Craft") by @(craft?.User?.FullName ?? "Unknown User")</h6>
                 <p>Picture</p>
-                <button class="btn btn-lg btn-outline-primary"><a href="/crafts/@craft.CraftId">Learn More</a></button>
+                <button class="btn learn-more"><a href="/crafts/@craft.CraftId">Learn More</a></button>
 
                 @if (loggedInUser.UserId == craft.UserId)
 
