--- a/Views/Partials/_LoginForm.cshtml
+++ b/Views/Partials/_LoginForm.cshtml
@@ -15,6 +15,6 @@
         <span class="form-text text-warning" asp-validation-for="@loginUser.Password"></span>
     </div>
     <div class="text-end">
-        <button type="submit" class="btn btn-outline-primary">Login</button>
+        <button type="submit" class="btn btn-outline-light">Login</button>
     </div>
 </form>
