--- a/Views/Partials/_RegisterForm.cshtml
+++ b/Views/Partials/_RegisterForm.cshtml
@@ -27,6 +27,6 @@
         <span class="form-text text-warning" asp-validation-for="ConfirmPassword"></span>
     </div>
     <div class="text-end">
-        <button type="submit" class="btn btn-outline-primary">Register</button>
+        <button type="submit" class="btn btn-outline-light">Register</button>
     </div>
 </form>
