--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-<style>
-    section,
-    a {
-        font-family: "Audiowide", sans-serif;
-    }
-</style>
-<section>
-    <a class="home display-5 position-absolute top-50 start-20 translate-middle-y" href="/login">Welcome to the HUB</a>
-    <a class="btn btn-outline-light position-absolute top-50 end-0 translate-middle-y" href="/login">start here</a>
-</section>
+
+<body class="welcome-page">
+    <div class="d-flex justify-content-center">
+        <a class="welcome display-1" href="/login">Welcome to the HUB</a>
+    </div>
+    <div class="d-flex justify-content-end">
+        <a class="btn btn-outline-light start-here" href="/login">start here</a>
+    </div>
+</body>
