--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <style>
-        section,
-        a {
-            font-family: "Audiowide", sans-serif;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow"> <!--fixied-top didn't work-->
             <div class="container"><a href="/"><img class="logo" src="~/images/logo1.png" alt="laser"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +32,7 @@
                             <a class="nav-link" href="/crafts/new">Share your craft</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
+                            <a class="nav-link logout" href="/logout">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -48,7 +47,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - LaserCraftHub - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - LaserCraftHub - <a asp-area="" asp-controller="Home" asp-action="Privacy"
+                style="color:#999494;">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
