changed size of messages and comments in the details page

--- a/Views/Craft/Crafts.cshtml
+++ b/Views/Craft/Crafts.cshtml
@@ -58,19 +58,17 @@
                             <div class="d-flex justify-content-end gap-1 mt-3">
                                 @if (craft.isLiked(loggedInUser.UserId))
                                 {
-                                    <!-- Un-Like Button with Filled Heart -->
                                     <form asp-action="UnLike" asp-controller="Craft" asp-route-craftId="@craft.CraftId" method="post">
                                         <button type="submit" class="btn-heart filled-heart">
-                                            <i class="fas fa-heart"></i> <!-- Filled heart icon -->
+                                            <i class="fas fa-heart"></i>
                                         </button>
                                     </form>
                                 }
                                 else
                                 {
-                                    <!-- Like Button with Outlined Heart -->
                                     <form asp-action="Like" asp-controller="Craft" asp-route-craftId="@craft.CraftId" method="post">
                                         <button type="submit" class="btn-heart outlined-heart animate-heart">
-                                            <i class="far fa-heart"></i> <!-- Outlined heart icon -->
+                                            <i class="far fa-heart"></i>
                                         </button>
                                     </form>
                                 }
