--- a/Views/Craft/CraftDetails.cshtml
+++ b/Views/Craft/CraftDetails.cshtml
@@ -13,53 +13,56 @@
 
 <section class="mb-5">
     <h1 class="display-2">@craft.Name</h1>
-    
+    <h2 class="display-5">Posted by: @(craft?.User?.FullName ?? "Unknown User")</h2>
+
     <img src="~/images/book.jpg" style="width:20rem;" alt="book">
-    
-    <p>@craft.Description</p>
-    
-    <a href="@(craft.Website.StartsWith("http://") || craft.Website.StartsWith("https://") ? craft.Website : "http://" + craft.Website)"
-        target="_blank">
-        @(string.IsNullOrEmpty(craft.Website) ? "No website available" : craft.Website)
-    </a>
-    
-    <p>Liked by @craft.Likes.Count users</p>
+
+    <p class="mt-5">@craft.Description</p>
+
+    <p>Shared website:
+        <a class="text-decoration-underline"
+            href="@(craft.Website.StartsWith("http://") || craft.Website.StartsWith("https://") ? craft.Website : "http://" + craft.Website)"
+            target="_blank">
+            @(string.IsNullOrEmpty(craft.Website) ? "No website available" : craft.Website)
+        </a>
+    </p>
+
+    <p class="mb-4">Liked by @craft.Likes.Count users</p>
     @if (loggedInUser.UserId == craft.UserId)
-    
+
     {
-        <div class="d-flex gap-1">
-            <a class="btn btn-warning btn-sm" href="/crafts/@craft.CraftId/edit">Edit</a>
+        <div class="d-flex gap-1 mb-5">
+            <a class="btn btn-outline-warning btn-sm" href="/crafts/@craft.CraftId/edit">Edit</a>
             <form asp-action="DeleteCraft" asp-controller="Craft" asp-route-craftId="@craft.CraftId" method="post">
                 <div class="text-end">
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                    <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
                 </div>
             </form>
         </div>
     }
     <div>
-        <p class="text-end">Please post comments and questions</p>
-    
+
         @await Html.PartialAsync("../Partials/_MessageForm", message)
         <!-- Display all messages and comments -->
         @foreach (var m in messages.OrderByDescending(m => m.CreatedAt))
-    
+
         {
             @if (m.CraftId == craft.CraftId)
-    
+
             {
-                <div class="message-container">
+                <div class="message-container w-50">
                     <h2>@m.MessageText</h2>
                     <p>Posted by: @m.User.FullName</p>
                     <p>@m.CreatedAt.ToString("MM/dd/yyyy HH:mm:ss")</p>
-    
+
                     <!-- Partial view for displaying comments -->
                     @await Html.PartialAsync("../Partials/_Comments", m)
-    
+
                     <!-- Partial view for the comment form -->
                     @await Html.PartialAsync("../Partials/_CommentForm", new Comment { MessageId = m.MessageId })
                 </div>
             }
-    
+
         }
     </div>
 </section>
