--- a/Views/Partials/_CommentForm.cshtml
+++ b/Views/Partials/_CommentForm.cshtml
@@ -5,7 +5,7 @@
 
 <form asp-action="CreateComment" asp-controller="Message" method="post" asp-route-messageId="@comment.MessageId">
     <div class="mb-3">
-        <label class="form-label" asp-for="CommentText"></label>
+        <label class="form-label" asp-for="CommentText">Ask a question:</label>
         <textarea class="form-control" rows="3" asp-for="CommentText"></textarea>
         <input type="hidden" name="MessageId" value="@comment.MessageId" />
         <span class="form-text text-warning" asp-validation-for="CommentText"></span>
