--- a/Views/Partials/_CommentForm.cshtml
+++ b/Views/Partials/_CommentForm.cshtml
@@ -11,6 +11,6 @@
         <span class="form-text text-warning" asp-validation-for="CommentText"></span>
     </div>
     <div class="text-end">
-        <button type="submit" class="btn btn-primary">Post Comment</button>
+        <button type="submit" class="btn btn-outline-secondary">Post Comment</button>
     </div>
 </form>
