--- a/Views/Partials/_MessageForm.cshtml
+++ b/Views/Partials/_MessageForm.cshtml
@@ -9,7 +9,7 @@
             <span class="form-text text-warning" asp-validation-for="MessageText"></span>
         </div>
         <div class="text-end">
-            <button type="submit" class="btn btn-primary">Post</button>
+            <button type="submit" class="btn btn-outline-secondary">Post a message</button>
         </div>
     </form>
 </div>
